fixing notification's timeout overlap

--- a/src/resources/sass/style.scss
+++ b/src/resources/sass/style.scss
@@ -784,19 +784,58 @@ main {
     }
 }
 
+@keyframes in {
+    from {
+        opacity: 0%;
+    }
+    to {
+        opacity: 100%;
+    }
+}
+
+@keyframes out {
+    from {
+        top: 90%; /* Parte fuori dalla finestra */
+    }
+    to {
+        top: 200%; /* Si ferma a 100px dall'alto */
+    }
+}
+
+@keyframes desktop-out {
+    from {
+        top: 19%; /* Parte fuori dalla finestra */
+    }
+    to {
+        top: -200%; /* Si ferma a 100px dall'alto */
+    }
+}
+
+.modal-in {
+    animation: in 0.5s ease forwards;
+}
+
 .modal {
+    opacity: 0%;
+    top: 90%;
     width: 100%;
     height: 50px;
     position: fixed;
-    top: 85%;
     right: 0;
     @media (min-width: $breakpoint) {
         top: 19%;
-        right: 0;
+        right: 25%;
         width: 50%;
     }
     z-index: 99;
+}
 
+.modal-out {
+    opacity: 100%;
+    animation: out 1s ease forwards;
+    @media (min-width: $breakpoint) {
+        animation: desktop-out 1s ease forwards;
+    }
 }
 
 .notification {
@@ -806,6 +845,7 @@ main {
     font-size: 1rem;
     padding: 10px;
     text-align: center;
+    margin-bottom: 10px;
     .message {
         vertical-align: middle;
         display: inline;
@@ -816,4 +856,17 @@ main {
         display: inline;
         width: 30px;
     }
+}
+
+@keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+}
+
+.fade-out {
+    animation: fadeOut 0.3s ease-in-out forwards;
 }
